[project]
name = "vlm-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.1",
    "ipykernel>=6.30.0",
    "mlflow>=3.1.4",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
